2011-03-12  Ilya Tikhonovsky  <loislo@chromium.org>

        Unreviewed. One line fix for inspector/dom-breakpoints.html

        * inspector/front-end/BreakpointManager.js:
        (WebInspector.DOMBreakpointView.prototype.populateStatusMessageElement.decorateNode):

2011-03-12  Ilya Tikhonovsky  <loislo@chromium.org>

        Unreviewed build fix.

        Almost all inspector tests are crashing after r80928.

        * inspector/front-end/inspector.js:

2011-03-11  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: follow up to error reporting, fixing multiple regressions.
        https://bugs.webkit.org/show_bug.cgi?id=56243

        * inspector/InjectedScript.cpp:
        (WebCore::InjectedScript::setPropertyValue):
        * inspector/InjectedScript.h:
        * inspector/Inspector.idl:
        * inspector/InspectorDOMAgent.cpp:
        (WebCore::InspectorDOMAgent::getChildNodes):
        (WebCore::InspectorDOMAgent::getOuterHTML):
        (WebCore::InspectorDOMAgent::getEventListenersForNode):
        * inspector/InspectorDOMAgent.h:
        * inspector/InspectorRuntimeAgent.cpp:
        (WebCore::InspectorRuntimeAgent::setPropertyValue):
        * inspector/InspectorRuntimeAgent.h:
        * inspector/front-end/DOMAgent.js:
        (WebInspector.DOMNode.prototype.setNodeName):
        (WebInspector.DOMNode.prototype.setNodeValue):
        (WebInspector.DOMNode.prototype.getChildNodes):
        (WebInspector.DOMNode.prototype.getOuterHTML):
        (WebInspector.DOMNode.prototype.setOuterHTML):
        (WebInspector.DOMNode.prototype.removeNode):
        (WebInspector.DOMNode.prototype.copyNode):
        (WebInspector.DOMAgent.prototype.pushNodeToFrontend):
        (WebInspector.DOMAgent.prototype.pushNodeByPathToFrontend):
        (WebInspector.EventListeners.getEventListenersForNode):
        * inspector/front-end/DOMStorage.js:
        (WebInspector.DOMStorage.prototype.getEntries):